--- a/Simple Web File Server/template/contact.html
+++ b/Simple Web File Server/template/contact.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html>
-<head>
-	<title>Index Page</title>
+<head lang="en">
+	<meta charset="utf-8">
+	<title>Contact Page</title>
 </head>
 <body>
-	<h2>Iam Index Page</h2>
+	<h2>I'm Contact Page</h2>
 	<!-- Menu -->
 	<ul>
 		<li><a href="/">Index</a></li>
